--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,15 @@
 {
+    "name": "sayana/sayanazm-lib",
+    "description": "My first lib",
+    "type": "library",
     "require": {
-        "psr/log": "^3.0"
-    }
+        "php": "^8.1"
+    },
+    "license": "php",
+    "authors": [
+        {
+            "name": "sayanazm",
+            "email": "kkit1303@gmail.com"
+        }
+    ]
 }
