--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,19 @@
     "require": {
         "php": "^8.1"
     },
-    "license": "php",
     "authors": [
         {
             "name": "sayanazm",
             "email": "kkit1303@gmail.com"
         }
-    ]
+    ],
+    "require-dev": {
+        "phpunit/phpunit": "^9.0"
+    },
+    "license": "MIT",
+    "autoload": {
+        "psr-4": {
+            "sayana\\sayanazm-lib\\": "src/"
+        }
+    }
 }
