--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,12 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "sayana\\sayanazm-lib\\": "src/"
+            "sayana\\sayanazmLib\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Sfmok\\sayanazmLib\\Tests\\": "tests/"
         }
     }
 }
